# Omega2D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: asymmetric_vortex_patch.json  backfacingstep.json  blender.json  corotating_vortices.json  driven_cavity.json  flap.json  flow_over_circle.json  flow_over_square.json  giannopoulou.json  speedtest20kx10.json  traveling_vortex_pair.json  traveling_vortice_pair.json
lib/imgui/: ImguiWindowsFileIO.cpp  ImguiWindowsFileIO.hpp  imgui_impl_opengl3.h
lib/miniz/: FrameBufferToImage.h
scripts/: compressvtk.sh  compressvtu.py
simulations/: asymmetric_vortex_patch.json  flap.json  flow_over_square.json
src/: BEM.h  BEMHelper.h  Body.cpp  Body.h  Boundaries.h  BoundaryFeature.cpp  BoundaryFeature.h  BoundaryFeature2.cpp  BoundaryFeature2.h  Coeffcients.h  Coefficients.h  Collection.h  CollectionHelper.cpp  CollectionHelper.h  Convection.h  Core.h  CoreFunc.h  CoreSpread.h  Diffusion.h  Distribution.h  ElementBase.h  ElementPacket.h  Elements.h  ExecEnv.h  Feature.h  FeatureDraw.cpp  FeatureDraw.h  FlowFeature.cpp  FlowFeature.h  FutureHelper.h  GlState.h  GmshHelper.h  GuiHelper.h  HOVolumes.h  Hybrid.h  Influence.h  InfluenceVort.h  JsonHelper.cpp  JsonHelper.h  Kernels.h  (+44 more)
src/glad/: glad.h
src/imgui/: FrameBufferToImage.cpp  FrameBufferToImage.hpp  ImguiWindowsFileIO.cpp  ImguiWindowsFileIO.hpp  imgui_draw.cpp  imgui_impl_glfw_gl3.cpp  imgui_impl_opengl3.cpp
src/miniz/: FrameBufferToImage.cpp
src/shaders/: elempack.frag  elempack.vert  oldparticle.frag  oldparticle.vert  panel.frag  panel.vert  particle.frag  particle.vert  particlept.frag  point.frag  point.vert  quad.geom  surfaceline.frag  surfaceline.vert
src/stb/: FrameBufferToImage.cpp  FrameBufferToImage.h
src/tinyexpr/: tinyexpr.c
